--- a/v2/about/designer-asurion.html
+++ b/v2/about/designer-asurion.html
@@ -50,6 +50,7 @@
         <nav class="about links">
             <a href="index.html" class="fade-link">About</a>
             <a href="assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
+            <a href="#" id="darkModeToggle">Dark Mode</a>
         </nav>
     </div></div>
 
