--- a/v2/index.html
+++ b/v2/index.html
@@ -36,6 +36,7 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/core.js"></script>
+<script src="js/index.js"></script>
 
 </head>
 <body>
@@ -69,10 +70,10 @@
         <span class="img bg-non"></span>
       </div>
     </div>
-    <div id="journal" class="section">
+    <div id="design-journal" class="section">
         <h4>Design Journal</h4>
         <div class="article-container">
-            <div class="article">
+            <div class="article journal">
                 <h3 class="title">Continously Improving with A/B Testing and Product Analytics</h3>
                 <p class="description">I'm passionate about improvement and took steps to align A/B Testing and analytics with an ongoing continous Improvement task.</p>
                 <p><a href="journal/ab-testing.html">Read the Journal</a></p>
@@ -82,7 +83,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article  casestudy">
                 <h3 class="title">Optimizing the Initial Experience</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin.</p>
                 <p><a href="casestudies/initial-experience/">Read the Case Study</a></p>
@@ -92,7 +93,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article about">
                 <h3 class="title">Working as a Designer & Front end Developer</h3>
                 <p class="description">From 2006 to 2016 I worked as both a designer and front end developer for a bookings organization.</p>
                 <p><a href="about/designer-developer.html">Read the Journal</a></p>
@@ -102,7 +103,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article journal">
                 <h3 class="title">How I advocated & defined Design principles for the Tsukasapo app</h3>
                 <p class="description">Design Principles are the building blocks of a design system which define its guidelines for all team members to follow.</p>
                 <p><a href="journal/design-principles.html">Read the Journal</a></p>
@@ -112,7 +113,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article casestudy">
                 <h3 class="title">Improving Adventure Cards Information Architecture</h3>
                 <p class="description">I revisited one of my former products to apply newly learnt UX skills and outline how I would resolve past challenges.</p>
                 <p><a href="casestudies/adventurecards/">Read the Case Study</a></p>
@@ -122,7 +123,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article journal">
                 <h3 class="title">Understanding a product and User flows</h3>
                 <p class="description">A clear understanding of a product, it's flows, screens and details allows you to design and iterate more effectively.</p>
                 <p><a href="journal/userflow-repository.html">Read the Journal</a></p>
@@ -132,7 +133,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article casestudy">
                 <h3 class="title">Pulse Football a rapid ideation</h3>
                 <p class="description"></p>
                 <p><a href="casestudies/pulse-football/">Read the Case Study</a></p>
@@ -142,7 +143,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article">
+            <div class="article journal">
               <h3 class="title">Applying Primitives & Design Tokens to Design System</h3>
               <p class="description">The following outlines the steps I took to implement figma's latest changes in the au design system.</p>
               <p><a href="journal/design-system.html">Read the Journal</a></p>
@@ -152,7 +153,7 @@
                   <span class="date">September 25, 2023</span>
               </div>
           </div>
-            <div class="article">
+            <div class="article about">
                 <h3 class="title">Formative Years in Design</h3>
                 <p class="description">Growing up I was interested in visual design and had a skill for technical 3D drawing. This led me to study Product Design & Development at University.</p>
                 <p><a href="about/formative-design.html">Read the Journal</a></p>
@@ -174,10 +175,9 @@
             <a href="#intro" class="selected">Introduction</a>
         </nav>
         <nav id="nav2">
-            <a href="#journal">Design Journal</a>
-            <a href="#casestudies">Case Studies</a>
+            <a href="#design-journal">Design Journal</a>
+            <a href="#casestudy">Case Studies</a>
             <a href="#journal">Journal</a>
-            <a href="#process">Process</a>
             <a href="#about">About</a>
         </nav>
         <nav class="links">
