--- a/v2/about/index.html
+++ b/v2/about/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="column">
-                <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span></span>
+                <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.png);"></span></span>
             </div>
         _</div>
     </div>
