--- a/v2/index.html
+++ b/v2/index.html
@@ -60,19 +60,18 @@
 
 <div class="body">
     <div id="intro" class="section column-container col1">
-      
+    <div class="column">
+        <span class="img bg-non"></span>
+    </div>
       <div class="column">
         <h2>Pushing the needle while<br /> engaging my creative intuition.</h2>
         <p class="l b">Hi I'm Peter, a Product Designer based in Tokyo. As a Senior Designer at Asurion Japan, I lead the UX & UI design for clients au and docomo.</p>
         <p>Read more about my <a href="about/">background and experience</a> working as a Product Designer.</p>
       </div>
-      <div class="column">
-        <span class="img bg-non"></span>
-      </div>
     </div>
     <div id="design-journal" class="section">
         <h4>Design Journal</h4>
-        <div class="article-container">
+        <div class="article-container column-container col3">
             <div class="article journal">
                 <h3 class="title">Continously Improving with A/B Testing and Product Analytics</h3>
                 <p class="description">I'm passionate about improvement and took steps to align A/B Testing and analytics with an ongoing continous Improvement task.</p>
