--- a/v2/about/index.html
+++ b/v2/about/index.html
@@ -70,7 +70,7 @@
             <div class="column">
                 <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.png);"></span></span>
             </div>
-        _</div>
+        </div>
     </div>
     <div id="background" class="section">
         <h4>Background</h4>
