--- a/v2/index.html
+++ b/v2/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="article casestudy">
                 <h3 class="title">Improving Adventure Cards Information Architecture</h3>
-                <p class="description">I revisited one of my former products to apply newly learnt UX skills and outline how I would resolve past challenges.</p>
+                <p class="description">I revisited one of my former projects to apply newly learnt UX skills and outline how I would resolve past challenges.</p>
                 <p><a href="casestudies/adventurecards/">Read the Case Study</a></p>
                 <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.png);"></span>
                 <div class="meta">
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="article casestudy">
-                <h3 class="title">Pulse Football a rapid ideation</h3>
+                <h3 class="title">Pulse Football : a rapid ideation challenge</h3>
                 <p class="description"></p>
                 <p><a href="casestudies/pulse-football/">Read the Case Study</a></p>
                 <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase3.png);"></span>
@@ -143,8 +143,8 @@
                 </div>
             </div>
             <div class="article journal">
-              <h3 class="title">Applying Primitives & Design Tokens to Design System</h3>
-              <p class="description">The following outlines the steps I took to implement figma's latest changes in the au design system.</p>
+              <h3 class="title">Design System : Applying Primitives & Design Tokens</h3>
+              <p class="description">The following outlines the steps I took to implement figma's latest changes to a projects design system.</p>
               <p><a href="journal/design-system.html">Read the Journal</a></p>
               <span class="img"></span>
               <div class="meta">
