--- a/v2/about/index.html
+++ b/v2/about/index.html
@@ -11,7 +11,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 
@@ -258,7 +258,7 @@
                 <span class="img-wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../casestudies/diagnosis-flow.html" title="Improving the Diagnosis User Journey">Improving the Diagnosis user journey</a></h3>
+                        <h3><a href="../casestudies/diagnosis-flow/" title="Improving the Diagnosis User Journey">Improving the Diagnosis user journey</a></h3>
                         <p>text text text.</p>
                     </div>
                     <span class="icn material-icons">chevron_right</span>
