--- a/v2/casestudies/adventurecards/index.html
+++ b/v2/casestudies/adventurecards/index.html
@@ -9,7 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 
