--- a/v2/journal/design-principles.html
+++ b/v2/journal/design-principles.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../css/device.css">
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 <!-- Google tag (gtag.js) -->
