--- a/v2/journal/hierachy-engagement.html
+++ b/v2/journal/hierachy-engagement.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Journal : Continous Improvement & A/B Testing | Peter Roper Product Designer</title>
+<title>Journal : Visual Hierachy | Peter Roper Product Designer</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="noindex, nofollow" />
@@ -60,7 +60,7 @@
     
     <div id="intro" class="section">
         <div id="intro" class="section">
-            <h2>Continously improving with A/B Testing </h2>
+            <h2>Design Thinking : Visual Hierachy and Engagement</h2>
             <div class="column-container col1">
                 <div class="column">
                     <h3>title</h3>
