--- a/v2/index.html
+++ b/v2/index.html
@@ -6,15 +6,17 @@
 <meta name="robots" content="noindex, nofollow" />
 <meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+<!--link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <!--link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet"-->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,900&family=Raleway:ital,wght@0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
+
 
 <link rel="stylesheet" type="text/css" href="css/css.css">
 <link rel="stylesheet" type="text/css" href="css/index.css">
