--- a/v2/journal/userflow-repository.html
+++ b/v2/journal/userflow-repository.html
@@ -6,15 +6,16 @@
 <meta name="robots" content="noindex, nofollow" />
 <meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+<!--link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <!--link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet"-->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,900&family=Raleway:ital,wght@0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="../css/css.css">
 <link rel="stylesheet" type="text/css" href="../css/index.css">
@@ -59,7 +60,6 @@
     <div class="body">
     
     <div id="intro" class="section">
-        <div id="intro" class="section">
             <h2>Understanding a Product and User flows</h2>
             <div class="column-container col1">
                 <div class="column">
@@ -82,7 +82,6 @@
                 </div>
                 <div class="column"></div>
             </div>
-        </div>
     </div>
       
     <!-- posts start -->
