--- a/v2/casestudies/adventurecards/index.html
+++ b/v2/casestudies/adventurecards/index.html
@@ -54,61 +54,14 @@
             <a href="#" id="darkModeToggle">Dark Mode</a>
         </nav>
     </div></div>
-<div id="fade-container" class="container">
+<div id="fade-container" class="container casestudy-3">
 
-<div class="navi sticky-element">
-    <a href="../../index.html" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
-    <nav class="selected">
-        <a href="#overview" class="selected">Overview</a>
-        <a href="#project">Project</a>
-        <a href="#product">Product</a>
-        <a href="#context">Context</a>
-    </nav>
-    <nav>
-        <a href="#definition">Definition</a>
-        <a href="#problem">Problem</a>
-        <a href="#pain-points">Pain Points</a>
-        <a href="#goal">Goal</a>
-        <a href="#final-design">Final Design</a>
-    </nav>
-    <nav>
-        <a href="#synthesis">Synthesis</a>
-        <a href="#research">Research</a>
-        <a href="#insights">Insights</a>
-        <a href="#persona">Persona</a>
-        <a href="#hypothesis">Hypothesis</a>
-    </nav>
-    <nav>
-        <a href="#discovery">Discovery</a>
-        <a href="#concept-design">Concept Design</a>
-        <a href="#ideation">Ideation</a>
-        <a href="#design-decisions">Decisions</a>
-    </nav>
-    <nav>
-        <a href="#design">Design</a>
-        <a href="#prototyping">Prototyping</a>
-        <a href="#usability-testing">Usability Testing</a>
-        <a href="#ut-insights">Insights</a>
-        <a href="#refinement">Refinement</a>
-    </nav>
-    <nav>
-        <a href="#development">Development</a>
-        <a href="#design-handoff">Hand Off</a>
-        <a href="#design-system">Design System</a>
-    </nav>
-    <nav>
-        <a href="#summary">Summary</a>
-        <a href="#outcomes">Outcomes</a>
-        <a href="next-steps">Next Steps</a>
-        <a href="#task-summary">Summary</a>
-    </nav>
-</div>
 <div class="body">
     
 <!-- Overview -->
-<div id="overview" class="section">
-    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.png);"></span>
-    <h2>Refining Information Architecture</h2>
+<div id="intro" class="section">
+    <h2>Refining Adventure Cards Information Architecture</h2>
+    <span class="img"></span>
         <div id="project" class="segment">
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO.</p>
             <ul>
@@ -487,6 +440,55 @@
     <!-- posts ends -->
 
 </div>
+
+<div class="navi sticky-element">
+    <a href="../../index.html" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
+    <nav class="selected">
+        <a href="#intro" class="selected">Overview</a>
+        <a href="#project">Project</a>
+        <a href="#product">Product</a>
+        <a href="#context">Context</a>
+    </nav>
+    <nav>
+        <a href="#definition">Definition</a>
+        <a href="#problem">Problem</a>
+        <a href="#pain-points">Pain Points</a>
+        <a href="#goal">Goal</a>
+        <a href="#final-design">Final Design</a>
+    </nav>
+    <nav>
+        <a href="#synthesis">Synthesis</a>
+        <a href="#research">Research</a>
+        <a href="#insights">Insights</a>
+        <a href="#persona">Persona</a>
+        <a href="#hypothesis">Hypothesis</a>
+    </nav>
+    <nav>
+        <a href="#discovery">Discovery</a>
+        <a href="#concept-design">Concept Design</a>
+        <a href="#ideation">Ideation</a>
+        <a href="#design-decisions">Decisions</a>
+    </nav>
+    <nav>
+        <a href="#design">Design</a>
+        <a href="#prototyping">Prototyping</a>
+        <a href="#usability-testing">Usability Testing</a>
+        <a href="#ut-insights">Insights</a>
+        <a href="#refinement">Refinement</a>
+    </nav>
+    <nav>
+        <a href="#development">Development</a>
+        <a href="#design-handoff">Hand Off</a>
+        <a href="#design-system">Design System</a>
+    </nav>
+    <nav>
+        <a href="#summary">Summary</a>
+        <a href="#outcomes">Outcomes</a>
+        <a href="next-steps">Next Steps</a>
+        <a href="#task-summary">Summary</a>
+    </nav>
+</div>
+
 </div>
 </body>
 </html>
