--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -55,14 +55,14 @@
             <a href="#" id="darkModeToggle">Dark Mode</a>
         </nav>
     </div></div>
-<div id="fade-container" class="container">
+<div id="fade-container" class="container casestudy1">
 
 <div class="body">
     
 <!-- Overview -->
 <div id="intro" class="section">
     <h2>Optimizing the Initial Experience</h2>
-    <span class="img xs" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.png);"></span>
+    <span class="img xs"></span>
     
         <div id="project" class="segment">
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
