--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -304,7 +304,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../casestudies/initial-experience/" title="Establishing Design Principles">Improving the initial experience</a></h3>
+                        <h3><a href="../../casestudies/initial-experience/" title="Establishing Design Principles">Improving the initial experience</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -315,7 +315,7 @@
                 <span class="img-wrap"><span class="img" ></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../journal/ab-testing.html" title="Establishing Design Principles">Continous Improvement with A/B Testing</a></h3>
+                        <h3><a href="../../journal/ab-testing.html" title="Establishing Design Principles">Continous Improvement with A/B Testing</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -326,7 +326,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../about/designer-asurion.html" title="Senior Designer with Asurion">Senior Design with Asurion</a></h3>
+                        <h3><a href="../../about/designer-asurion.html" title="Senior Designer with Asurion">Senior Design with Asurion</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -341,7 +341,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../casestudies/diagnosis-flow/" title="Improving the Diagnosis User Journey">Improving the Diagnosis user journey</a></h3>
+                        <h3><a href="../../casestudies/diagnosis-flow/" title="Improving the Diagnosis User Journey">Improving the Diagnosis user journey</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -352,7 +352,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../about/designer-developer.html" title="Working as a Designer and Developer">Working as a Designer and Developer</a></h3>
+                        <h3><a href="../../about/designer-developer.html" title="Working as a Designer and Developer">Working as a Designer and Developer</a></h3>
                         <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -363,7 +363,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../journal/design-system.html" title="Design System : applying primitives & design tokens">Design System : applying primitives & design tokens</a></h3>
+                        <h3><a href="../../journal/design-system.html" title="Design System : applying primitives & design tokens">Design System : applying primitives & design tokens</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -377,7 +377,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../casestudies/adventure-cards/" title="Improving Adventure Cards information architecture">Improving Adventure Cards information architecture</a></h3>
+                        <h3><a href="../../casestudies/adventure-cards/" title="Improving Adventure Cards information architecture">Improving Adventure Cards information architecture</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -388,7 +388,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../journal/design-principles.html" title="Defining Design Principles for a Product">Defining Design Principles for a Product</a></h3>
+                        <h3><a href="../../journal/design-principles.html" title="Defining Design Principles for a Product">Defining Design Principles for a Product</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -399,7 +399,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../about/formative-design.html" title="Formative years in Design">Formative years in Design</a></h3>
+                        <h3><a href="../../about/formative-design.html" title="Formative years in Design">Formative years in Design</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -413,7 +413,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../journal/userflow-repository/" title="Understanding a Product and User flow">Understanding a Product and User flow</a></h3>
+                        <h3><a href="../../journal/userflow-repository/" title="Understanding a Product and User flow">Understanding a Product and User flow</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -424,7 +424,7 @@
                 <span class="img-wrap"><span class="img" ></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../journal/hierachy-engagement.html" title="Defining Design Principles for a Product">Design Thinking : visual hierachy and engagement</a></h3>
+                        <h3><a href="../../journal/hierachy-engagement.html" title="Defining Design Principles for a Product">Design Thinking : visual hierachy and engagement</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
@@ -435,7 +435,7 @@
                 <span class="img-wrap"><span class="img"></span></span>
                 <div class="contents">
                     <div>
-                        <h3><a href="../casestudies/pulse-football/" title="Formative years in Design">Pulse Football a rapid ideation challenge</a></h3>
+                        <h3><a href="../../casestudies/pulse-football/" title="Formative years in Design">Pulse Football a rapid ideation challenge</a></h3>
                          <!--p>text text text.</p-->
                     </div>
                     <span class="icn material-icons">chevron_right</span>
