--- a/v2/casestudies/pulse-football/index.html
+++ b/v2/casestudies/pulse-football/index.html
@@ -21,9 +21,10 @@
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 
 <link rel="stylesheet" type="text/css" href="../../css/css.css">
-<link rel="stylesheet" type="text/css" href="../../css/index.css">
+<link rel="stylesheet" type="text/css" href="../../css/casestudy.css">
 <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../../css/device.css">
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKDNBLWNTV"></script>
@@ -62,7 +63,7 @@
 <!-- Overview -->
 <div id="intro" class="section">
     <h2>Pulse Football a rapid ideation challenge</h2>
-    <span class="img"></span>
+    <span class="img xs"></span>
         <div id="project" class="segment">
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO.</p>
             <ul>
