--- a/v2/casestudies/adventure-cards/index.html
+++ b/v2/casestudies/adventure-cards/index.html
@@ -21,7 +21,7 @@
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 
 <link rel="stylesheet" type="text/css" href="../../css/css.css">
-<link rel="stylesheet" type="text/css" href="../../css/index.css">
+<link rel="stylesheet" type="text/css" href="../../css/casestudy.css">
 <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../../css/device.css">
 
@@ -61,7 +61,7 @@
 <!-- Overview -->
 <div id="intro" class="section">
     <h2>Refining Adventure Cards Information Architecture</h2>
-    <span class="img"></span>
+    <span class="img xs"></span>
         <div id="project" class="segment">
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO.</p>
             <ul>
