--- a/v2/index.html
+++ b/v2/index.html
@@ -75,7 +75,7 @@
     <div id="design-journal" class="section">
         <h4>Design Journal</h4>
         <div class="article-container column-container col3">
-            <div class="article journal">
+            <div id="ab-testing" class="article journal">
                 <h3 class="title">Continously Improving with A/B Testing and Product Analytics</h3>
                 <p class="description">I'm passionate about improvement and took steps to align A/B Testing and analytics with an ongoing continous Improvement task.</p>
                 <p><a href="journal/ab-testing.html">Read the Journal</a></p>
@@ -85,17 +85,17 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article  casestudy">
+            <div id="casestudy1" class="article  casestudy">
                 <h3 class="title">Optimizing the Initial Experience</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin.</p>
                 <p><a href="casestudies/initial-experience/">Read the Case Study</a></p>
-                <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.png);"></span>
+                <span class="img sm"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article about">
+            <div id="design-dev" class="article about">
                 <h3 class="title">Working as a Designer & Front end Developer</h3>
                 <p class="description">From 2006 to 2016 I worked as both a designer and front end developer for a bookings organization.</p>
                 <p><a href="about/designer-developer.html">Read the Journal</a></p>
@@ -105,7 +105,7 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article journal">
+            <div id="design-principles" class="article journal">
                 <h3 class="title">How I advocated & defined Design principles for the Tsukasapo app</h3>
                 <p class="description">Design Principles are the building blocks of a design system which define its guidelines for all team members to follow.</p>
                 <p><a href="journal/design-principles.html">Read the Journal</a></p>
@@ -115,17 +115,17 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article casestudy">
+            <div id="casestudy3" class="article casestudy">
                 <h3 class="title">Improving Adventure Cards Information Architecture</h3>
                 <p class="description">I revisited one of my former projects to apply newly learnt UX skills and outline how I would resolve past challenges.</p>
                 <p><a href="casestudies/adventure-cards/">Read the Case Study</a></p>
-                <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.png);"></span>
+                <span class="img sm"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article journal">
+            <div id="user-flow" class="article journal">
                 <h3 class="title">Understanding a product and User flows</h3>
                 <p class="description">A clear understanding of a product, it's flows, screens and details allows you to design and iterate more effectively.</p>
                 <p><a href="journal/userflow-repository.html">Read the Journal</a></p>
@@ -135,17 +135,17 @@
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article casestudy">
+            <div id="casestudy4" class="article casestudy">
                 <h3 class="title">Pulse Football : a rapid ideation challenge</h3>
                 <p class="description"></p>
                 <p><a href="casestudies/pulse-football/">Read the Case Study</a></p>
-                <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase3.png);"></span>
+                <span class="img sm"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article journal">
+            <div id="design-system" class="article journal">
               <h3 class="title">Design System : Applying Primitives & Design Tokens</h3>
               <p class="description">The following outlines the steps I took to implement figma's latest changes to a projects design system.</p>
               <p><a href="journal/design-system.html">Read the Journal</a></p>
@@ -155,7 +155,7 @@
                   <span class="date">September 25, 2023</span>
               </div>
           </div>
-            <div class="article about">
+            <div id="formative-design" class="article about">
                 <h3 class="title">Formative Years in Design</h3>
                 <p class="description">Growing up I was interested in visual design and had a skill for technical 3D drawing. This led me to study Product Design & Development at University.</p>
                 <p><a href="about/formative-design.html">Read the Journal</a></p>
