--- a/v2/about/designer-asurion.html
+++ b/v2/about/designer-asurion.html
@@ -18,7 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,900&family=Raleway:ital,wght@0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="../css/css.css">
-<link rel="stylesheet" type="text/css" href="../css/index.css">
+<link rel="stylesheet" type="text/css" href="../css/about.css">
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../css/device.css">
 
@@ -55,7 +55,7 @@
         </nav>
     </div></div>
 
-<div id="fade-container" class="container">
+<div id="fade-container" class="container page-asurion">
 
     <div class="body">
     
@@ -73,7 +73,9 @@
                     <li>Call center chat tools</li>
                 </ul>
             </div>
-            <div class="column"></div>
+            <div class="column">
+                <span class="wrap"><span class="img bg-non"></span></span>
+            </div>
         </div>
 
         <div class="column-container col1">
