--- a/v2/journal/home-improvement-enthusiast.html
+++ b/v2/journal/home-improvement-enthusiast.html
@@ -18,7 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,900&family=Raleway:ital,wght@0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="../css/css.css">
-<link rel="stylesheet" type="text/css" href="../css/index.css">
+<link rel="stylesheet" type="text/css" href="../css/about.css">
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../css/device.css">
 
@@ -55,7 +55,7 @@
         </nav>
     </div></div>
 
-<div id="fade-container" class="container">
+<div id="fade-container" class="container page-hobbies">
 
     <div class="body">
     
@@ -68,7 +68,9 @@
                     <h3>An English country garden</h3>
                     <p>One of the great past times of the British is to garden and I am no different. I love landscape gardening and have spent many hours creating and refining my own green space in Chiba.</p>
                 </div>
-                <div class="column"></div>
+                <div class="column">
+                    <span class="wrap"><span class="img bg-non"></span></span>
+                </div>
             </div>
             <div class="column-container col1">
                 <div class="column">
